src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Additional_Contact_Address__c</fullName>
        <label>Additional Contact Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Contact_Email__c</fullName>
        <label>Additional Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Contact_Fax__c</fullName>
        <label>Additional Contact Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Additional_Contact_Mobile__c</fullName>
        <label>Additional Contact Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Additional_Contact_Name__c</fullName>
        <label>Additional Contact Name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Contact_Phone__c</fullName>
        <label>Additional Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <inlineHelpText>This can be used to store wedding anniversary, an anniversary of doing business together, or any other annually noteworthy date.</inlineHelpText>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bonus_Suppression__c</fullName>
        <formula>Account.Bonus_Suppression__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Suppression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Name</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__CES__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contact Email Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAR__c</fullName>
        <label>Mailing Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mailing Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAV__c</fullName>
        <label>Mailing Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MRDI__c</fullName>
        <label>Mailing Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MTZ__c</fullName>
        <label>Mailing Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAR__c</fullName>
        <label>Other Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAV__c</fullName>
        <label>Other Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ORDI__c</fullName>
        <label>Other Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OTZ__c</fullName>
        <label>Other Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Conversion__c</fullName>
        <label>Created By Conversion</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_NOT_FAX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DO NOT FAX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Bounced__c</fullName>
        <formula>EmailBouncedDate</formula>
        <label>Date Bounced</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Activity__c</fullName>
        <label>Date of Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Does_the_Merchant__c</fullName>
        <label>Does the Merchant</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Efax_Notes__c</fullName>
        <description>The reason for the status details.</description>
        <label>Efax Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Efax_Status__c</fullName>
        <description>This is the status of the last efax sent.</description>
        <label>Efax Status</label>
        <picklist>
            <picklistValues>
                <fullName>FAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUCCESS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Efax__c</fullName>
        <formula>if(len(substitute(SUBSTITUTE( SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Fax, &quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;), &quot;-&quot;,&quot;&quot;) ,&quot;.&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;))=10,hyperlink(&quot;mailto:fax=&quot;&amp;&quot;1&quot;&amp;substitute(SUBSTITUTE( SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Fax, &quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;), &quot;-&quot;,&quot;&quot;) ,&quot;.&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;)&amp;&quot;@10.10.10.16&quot;,&quot;fax=&quot;&amp;&quot;1&quot;&amp;substitute(SUBSTITUTE( SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Fax, &quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;), &quot;-&quot;,&quot;&quot;) ,&quot;.&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;)&amp;&quot;@10.10.10.16&quot;),&quot;Not Provided&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Efax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Present__c</fullName>
        <formula>if( CONTAINS(Email, &quot;@&quot;)  , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Present</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_for_bankruptcy__c</fullName>
        <inlineHelpText>Has Principal declared bankruptcy within the last ten (10) years?</inlineHelpText>
        <label>Filed for bankruptcy?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>H_Phone_Ext__c</fullName>
        <label>Home Phone Ext</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <label>Import ID</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Temporary_Password__c</fullName>
        <label>Last Temporary Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Gross_Salary__c</fullName>
        <label>Monthly Gross Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Months_at_Current_Address__c</fullName>
        <label>Months at Current Address</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_at_Previous_Address__c</fullName>
        <label>Months at Previous Address</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_Bank_Personal__c</fullName>
        <label>Name of Bank (Personal)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnershipPercentage__c</fullName>
        <label>Ownership Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Type__c</fullName>
        <label>Partner Contact Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Industry_Type__c</fullName>
        <label>Partner Industry Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_User_Name__c</fullName>
        <label>Partner User Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>R00N50000001Qp8REAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Ext__c</fullName>
        <label>Phone Ext</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_1_City__c</fullName>
        <label>Principal 1 City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_1_Country__c</fullName>
        <label>Principal 1 Country</label>
        <picklist>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Principal_1_State__c</fullName>
        <label>Principal 1 State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_1_Street_Address__c</fullName>
        <label>Principal 1 Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Principal_1_Zip__c</fullName>
        <label>Principal 1 Zip</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_2_City__c</fullName>
        <label>Principal 2 City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_2_Date_of_Birth__c</fullName>
        <label>Principal 2 Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Principal_2_Email__c</fullName>
        <label>Principal 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Principal_2_First_Name__c</fullName>
        <label>Principal 2 First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Principal_2_Last_Name__c</fullName>
        <label>Principal 2 Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Principal_2_Mobile__c</fullName>
        <label>Principal 2 Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Principal_2_Percent_Ownership__c</fullName>
        <label>Principal 2 Percent Ownership</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Principal_2_Phone__c</fullName>
        <label>Principal 2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Principal_2_Social_Security_Number__c</fullName>
        <label>Principal 2 Social Security Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_2_State__c</fullName>
        <label>Principal 2 State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_2_Street_Address__c</fullName>
        <label>Principal 2 Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Principal_2_Zip__c</fullName>
        <label>Principal 2 Zip</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Home_Phone__c</fullName>
        <label>Principal Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Principal_Type__c</fullName>
        <label>Principal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Guarantor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Signer and Guarantor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signer and Guarantor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RF_Who__c</fullName>
        <label>RF_Who</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <label>Referrer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship to Owner</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS__c</fullName>
        <inlineHelpText>Do not enter spaces or dashes.</inlineHelpText>
        <label>SS#</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Anniversary_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is part of the Birthday Emailer AppExchange package.</description>
        <inlineHelpText>Check this field if you wish to send an anniversary email to this contact, using the Anniversary Email email template.</inlineHelpText>
        <label>Send Anniversary Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Birthday_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is related to the Birthday Emailer AppExchange package</description>
        <inlineHelpText>Check this field to enable an automated birthday email to be sent to this contact, using the &quot;Birthday Email&quot; email template.</inlineHelpText>
        <label>Send Birthday Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SoftPhone_Test__c</fullName>
        <formula>HYPERLINK(&quot;javascript:sendCTIMessage(%27/CLICK_TO_DIAL?DN=&quot;&amp;Account.Phone&amp;&quot;&amp;ID=&amp;&quot;&amp; AccountId &amp;&quot;&amp;ENTITY_NAME=Account%27)&quot;,Account.Phone,&quot;_self&quot;)</formula>
        <label>SoftPhone Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscribed_to_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscribed to Newsletter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Years_at_Current__c</fullName>
        <label>Years at Current Address</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Gina_s_CFA_s_Factoring_World_Pre_Show</fullName>
        <columns>ContactID__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Referrer__c</field>
            <operation>startsWith</operation>
            <value>CFA&apos;s Factoring World Pre-Show Attendee List</value>
        </filters>
        <label>Gina&apos;s CFA&apos;s Factoring World Pre-Show</label>
        <sharedTo>
            <role>Administrator</role>
            <role>BusinessDevelopment</role>
            <role>MarketingDepartment</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gina_s_Franchise_Finance_Growth_Confer</fullName>
        <columns>ContactID__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Referrer__c</field>
            <operation>startsWith</operation>
            <value>Franchise Finance &amp; Growth Conference</value>
        </filters>
        <label>Gina&apos;s Franchise Finance &amp; Growth Confer</label>
        <sharedTo>
            <role>Administrator</role>
            <role>BusinessDevelopment</role>
            <role>MarketingDepartment</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IFA_Conference_April_2013_Miami</fullName>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Referrer__c</field>
            <operation>startsWith</operation>
            <value>IFA Conference April 2013 Miami</value>
        </filters>
        <label>IFA Conference April 2013 Miami</label>
        <sharedTo>
            <role>Administrator</role>
            <role>BusinessDevelopment</role>
            <role>MarketingDepartment</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NAELB_Western_Regional</fullName>
        <columns>ContactID__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Referrer__c</field>
            <operation>startsWith</operation>
            <value>NAELB Western Regional</value>
        </filters>
        <label>NAELB Western Regional</label>
        <sharedTo>
            <role>Administrator</role>
            <role>BusinessDevelopment</role>
            <role>MarketingDepartment</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Tim_s_10_02_2013_Email_Blast</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Referrer__c</field>
            <operation>equals</operation>
            <value>TI 10/02/2013 50-100 Email Blast</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>tiucu</value>
        </filters>
        <filters>
            <field>CONTACT.LAST_ACTIVITY</field>
            <operation>equals</operation>
            <value>10/2/2013</value>
        </filters>
        <label>Tim&apos;s 10/02/2013 Email Blast</label>
        <sharedTo>
            <role>AccountExecutive</role>
        </sharedTo>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PhoneExtOnlyText</fullName>
        <active>true</active>
        <description>Will let user enter only numbers for the extension fields.</description>
        <errorConditionFormula>IF(ISBLANK( Phone_Ext__c ), false, (IF(ISNUMBER(Phone_Ext__c),false,true)))</errorConditionFormula>
        <errorDisplayField>Phone_Ext__c</errorDisplayField>
        <errorMessage>Please enter numbers only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PhoneExtOnlyTextHome</fullName>
        <active>true</active>
        <description>Will let the user enter only numbers in the extension fields.</description>
        <errorConditionFormula>IF(ISBLANK( H_Phone_Ext__c ), false, (IF(ISNUMBER(H_Phone_Ext__c),false,true)))</errorConditionFormula>
        <errorDisplayField>H_Phone_Ext__c</errorDisplayField>
        <errorMessage>Please enter numbers only.</errorMessage>
    </validationRules>
</CustomObject>